[package]
authors = ["Pim van den Berg"]
description = "A safe GSL wrapper"
categories = ["algorithms", "mathematics", "science", "api-bindings"]
edition = "2021"
license-file = "LICENSE"
name = "gsl_rust"
version = "0.7.4"
repository = "https://github.com/PvdBerg1998/gsl_rust"

[dependencies]
drop_guard = "0.3.0"
num-complex = "0.4.0"
num-traits = "0.2.14"
katexit = "0.1.0"
katex = "0.4"

[dev-dependencies]
approx = "0.5"
criterion = {version = "0.3", features = ["html_reports"]}
fastrand = "1.6"

[build-dependencies]
bindgen = "0.59.2"
cmake = "0.1"

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    ".cargo/registry/src/github.com-1ecc6299db9ec823/katex-doc-0.1.0/katex.html",
]

[[bench]]
harness = false
name = "my_benchmark"
